--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
             color: #fff;
             margin: 0;
             padding: 0;
+            width: 100%;
+            height: 100vh;
         }
 
         .navbar {
@@ -35,6 +37,8 @@
         .hero-section {
             text-align: center;
             padding: 100px 20px;
+            width: 100%;
+            height: 75vh;
         }
 
         .hero-section h1 {
